Add ClusterActor class, enhance GamePresenter and GameView for cluster interactions, and update simulation logic